view orders page and fixes

--- a/main/resources/static/stylesheet.css
+++ b/main/resources/static/stylesheet.css
@@ -9,3 +9,11 @@
 	tect-decoration-style: solid;
 	text-decoration-thickness: 5px;
 }
+
+.centered {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
